# ancient-greek-nlp

./: ancient_greek_nlp.py  config.yml  pyproject.toml  requirements.txt
data/: book_bible-ancient-greek_anon.txt
data/bbc_arabic/analysis_json/: 10_14_bbc-news_20250420-061722.json  11_15_bbc-economic_20250420-060029.json  12_15_bbc-news_20250420-061731.json  13_16_bbc-economic_20250420-060038.json  14_16_bbc-news_20250420-061742.json  15_17_bbc-economic_20250420-060046.json  16_17_bbc-news_20250420-061750.json  17_18_bbc-economic_20250420-060055.json  18_18_bbc-news_20250420-061759.json  19_19_bbc-economic_20250420-060105.json  1_10_bbc-economic_20250420-055942.json  20_19_bbc-news_20250420-061807.json  21_1_bbc-economic_20250420-055821.json  22_1_bbc-news_20250420-061515.json  23_20_bbc-economic_20250420-060116.json  24_20_bbc-news_20250420-061815.json  25_21_bbc-economic_20250420-060125.json  26_21_bbc-news_20250420-061825.json  27_22_bbc-economic_20250420-060135.json  28_22_bbc-news_20250420-061834.json  29_23_bbc-economic_20250420-060143.json  2_10_bbc-news_20250420-061643.json  30_23_bbc-news_20250420-061843.json  31_24_bbc-economic_20250420-060152.json  32_24_bbc-news_20250420-061852.json  33_2_bbc-economic_20250420-055830.json  34_2_bbc-news_20250420-061525.json  35_3_bbc-economic_20250420-055839.json  36_3_bbc-news_20250420-061535.json  37_4_bbc-economic_20250420-055848.json  38_4_bbc-news_20250420-061545.json  39_5_bbc-economic_20250420-055857.json  3_11_bbc-economic_20250420-055951.json  40_5_bbc-news_20250420-061554.json  41_6_bbc-economic_20250420-055905.json  42_6_bbc-news_20250420-061604.json  43_7_bbc-economic_20250420-055915.json  44_7_bbc-news_20250420-061614.json  45_8_bbc-economic_20250420-055924.json  46_8_bbc-news_20250420-061623.json  (+8 more)
data/bbc_arabic/analysis_raw/: 10_bbc-economic_20250420-055942_raw.json  10_bbc-news_20250420-061643_raw.json  11_bbc-economic_20250420-055951_raw.json  11_bbc-news_20250420-061653_raw.json  12_bbc-economic_20250420-060000_raw.json  12_bbc-news_20250420-061701_raw.json  (+42 more)
data/bible_ancient-greek/: .~lock.bible_ancient-greek-sentiment.csv#  bible_ancient-greek-sentiment.csv  bible_ancient-greek-sentiment_20250426-1752.csv  bible_ancient-greek-sentiment_frag.csv
data/metadata/: aggregated_news_topic-sa_raw_orig.csv  aggregated_news_topic-sa_topic-metatag_orig.csv
docs/: prompt_architect_overview.txt  prompt_sentiment-only.txt
src/: step1a_FINAL_scrape_news-arabic_notebooks.py  step1b_FINAL_scrape_news-english.py  step1c_ segment_document.py  step1c_FINAL_segment_document_metafiles.py  step1c_segment_document.py  step1c_segment_document_metachunks-files.py  step1c_segment_document_metachunks-files_ver1.py  step1c_segment_document_metachunks-files_ver2.py  step1c_segment_document_metafiles_ver1.py  step1c_segment_document_ver1.py  step2_FINAL_get_news_topics-sa.py  step2_get_segment_topic-sentiment-emotions.py  step2c_FINAL_get_segment_sentiment.py  step2c_FINAL_get_segment_sentiment_ver1.py  step2c_get_segment_sentiment.py  step3_FINAL_aggregate_topic-sa_json2csv.py  step4_FINAL_cluster_manual_gemini3_2pass.md  step5_FINAL_insert_metatags.py  test_llm-arabic_gemini25flash.py  test_llm-arabic_gemini25flash_ver1.py  util_delete_dups.py
tests/: test_absa.py  test_conf.py  test_end-to-end.py  test_preprocessing.py  test_sentiment.py  test_topic-modeling.py
utils/: absa.py  io_utils.py  logging_utils.py  preprocessing.py  sentiment.py  topic_modeling.py  visualization.py
(+1810 files in other folders)
